SSCSFT-114 Investigate and improve Inconsistent Test
Amend assertion to remove ignore array order and improve logging